unpackaged/main/default/objects/OrderApi__Catalog_Item__c/OrderApi__Catalog_Item__c.object-meta.xml
<CustomObject>
    <description>Item listings control how a particular Item is presented in a Item Catalog</description>
    <label>Catalog Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Catalog Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>