unpackaged/main/default/objects/OrderApi__Catalog_Item__c/fields/OrderApi__Catalog__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Link to related Catalog</description>
    <inlineHelpText>**Required** Link to related Catalog</inlineHelpText>
    <label>Catalog</label>
    <referenceTo>OrderApi__Catalog__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Catalog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>