unpackaged/main/default/objects/OrderApi__Catalog_Item__c/fields/OrderApi__Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Item will be featured when using display types that support featured items.</description>
    <inlineHelpText>When checked, the Item will be featured when using display types that support featured items.</inlineHelpText>
    <label>Is Featured</label>
    <type>Checkbox</type>
</CustomField>