unpackaged/main/default/objects/OrderApi__Catalog_Item__c/fields/OrderApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated Override ** Is Published is unchecked when the linked Item &quot;Is Active&quot; is unchecked. When checked, the Item &quot;Listing&quot; is included when results are retrieved via the API for E-Store integrations. Defaults checked for &quot;Active&quot; Items.</description>
    <inlineHelpText>** System Calculated Override ** Is Published is unchecked when the linked Item &quot;Is Active&quot; is unchecked. When checked, the Item &quot;Listing&quot; is included when results are retrieved via the API for E-Store integrations. Defaults checked for &quot;Active&quot; Items.</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>