unpackaged/main/default/objects/OrderApi__Catalog_Item__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Link to related Item</description>
    <inlineHelpText>**Required** Link to related Item</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Catalogs</relationshipLabel>
    <relationshipName>Catalog_Items</relationshipName>
    <type>Lookup</type>
</CustomField>